# parastell

./: .gitignore  Dockerfile  ExampleScript.py  INSTALL.md  LICENSE.md  README.md  coils.txt  coils_tet_mesh.py  dockerfile  environment.yml  flux_surface.py  magnet_coils.py  parametric_stellarator.py  parastell.py  pyproject.toml  rlmcloud.in  source_mesh.py
.github/workflows/: black.yml  build.yml  ci.yml  doc_test.yml  docker_publish.yml
Examples/: config.yaml  custom_first_wall_profile_example.py  custom_geometry_example.py  custom_source_example.py  example_python.py  example_yaml.py  nwl_example.py  nwl_geom_example.py  nwl_plot_example.py  parastell_cad_to_dagmc_example.py  parastell_cubit_example.py  parastell_example.py  parastell_pydagmc_example.py  pydagmc_example.py  radial_build_distance_example.py  radial_distance_example.py
NWL/: NWL.py  NWL_geom.py  NWL_plot.py  NWL_transport.py
doc/source/: conf.py  index.rst
docs/source/: conf.py  index.rst
examples/: config.yaml  custom_first_wall_profile_example.py  custom_source_example.py  nwl_cubit_example.py  nwl_example.py  nwl_geom_example.py  nwl_pydagmc_example.py  parastell_cad_to_dagmc_example.py  parastell_cubit_example.py  parastell_pydagmc_example.py  radial_distance_example.py  source_shell_example.py
executables/: invessel_build  magnet_set  parastell  source_mesh
parastell/: __init__.py  __main__.py  cubit_io.py  cubit_utils.py  invessel_build.py  log.py  magnet_coils.py  nwl_utils.py  parastell.py  radial_distance_utils.py  source_mesh.py  utils.py
parastell/pystell/: LICENSE  read_vmec.py
parastell/tests/: test_invessel_build.py  test_magnet_coils.py  test_parastell.py  test_source_mesh.py
src/: config.yaml  cubit_io.py  cubit_utils.py  invessel_build.py  ivc.py  magnet_coils.py  parastell.py  source_mesh.py  sourcemesh.py  util.py  utils.py
src/Examples/: coils.txt  config.yaml  example.py  example_python.py  example_yaml.py
tests/: parastell  test_invessel_build.py  test_ivc.py  test_magnet_coils.py  test_nwl.py  test_parastell.py  test_source_mesh.py  test_sourcemesh.py  test_utils.py
tests/files_for_tests/: circular_coils.example  coils.example  custom_surface_ribs.npy  custom_surface_rz_ribs.npy  kisslinger_file_example.txt  kisslinger_file_scrambled.txt  magnet_geom.step  magnet_geom_with_casing.step  magnet_set.cub5  nwl_geom.h5m  one_cube.h5m  source_mesh.h5m  strengths.npy  two_cubes.h5m
tests/files_for_tests/cross_sections/: 01H_001.h5  01H_002.h5  01H_003.h5  cross_sections.xml
tet_mesh_scripts/: coils_tet_mesh_script.py  toroid_tet_mesh_script.py
