[project]
name = "parastell"
description = "Parametric 3-D CAD modeling toolset for stellarator fusion devices"
version = "0.0.3"

readme = "README.md"
requires-python = ">=3.11.0"
maintainers = [
    {name = "Connor Moreno", email = "camoreno@wisc.edu"},
    {name = "Paul Wilson", email = "paul.wilson@wisc.edu"}
]

authors = [
    {name = "Connor Moreno"},
    {name = "Edgar Pflug"},
    {name = "Paul Wilson"},
    {name = "Eitan Weinstein"},
    {name = "Enrique Miralles-Dolz"},
    {name = "Joshua Smandych"},
    {name = "Paul Romano"},
    {name = "Bowen Quan"},
    {name = "Jonathan Shimwell"}
]

keywords = ["stellarator", "fusion", "reactor", "parametric", "cad", "model", "dagmc", "geometry"]
license = {file="LICENSE.md"}
classifiers = [
       "Development Status :: 3 - Alpha",
       "Intended Audience :: Science/Research",
       "Intended Audience :: Developers",
       "License :: OSI Approved :: MIT License",
       "Natural Language :: English",
       "Operating System :: OS Independent",
       "Topic :: Scientific/Engineering :: Physics",
       "Topic :: Scientific/Engineering",
       "Topic :: Scientific/Engineering :: Human Machine Interfaces",
       "Programming Language :: Python :: 3 :: Only",
       "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "scipy",
    "cadquery",
    "pymoab>=5.5",
    "cad_to_dagmc>=0.9.1",
    "openmc>=0.15",
    "matplotlib",
    "netcdf4",
    "pyyaml",
    "pydagmc"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

format = ["black==25.*"]

build = ["build"]

docs = ["sphinx", "sphinxcontrib.apidoc", "sphinx_rtd_theme"]

develop = ["parastell[test,format,build,docs]"]

[project.urls]
Repository = "https://github.com/svalinn/parastell.git"
"Bug Tracker" = "https://github.com/svalinn/parastell/issues"

[project.scripts]
"parastell" = "parastell.parastell:parastell"

[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where=["parastell/"]

[tool.black]
line-length = 79
target-version = ['py311', 'py312', 'py313']
